Add model to exec prefixes