@@ -112,6 +112,7 @@ private val EXEC_PREFIX =
        --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
        --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
        --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+       --add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
        --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
        --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
        --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
